--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-<app-root></app-root>
+<body class="nav-md">
+<div class="container body">
+  <div class="main_container">
+    <app-root></app-root>
+  </div>
+</div>
 </body>
 </html>
